header footer consistency

--- a/static/css/_button.scss
+++ b/static/css/_button.scss
@@ -2,30 +2,35 @@
   width: -webkit-fit-content;
   width: -moz-fit-content;
   width: fit-content;
-  padding: 0 1.5rem;
-  font-size: 1rem;
-  line-height: 1.2;
-  border-radius: 0.25rem;
   display: inline-flex;
+  line-height: 1;
+  border-radius: 0.25rem;
   align-items: center;
   font-weight: 500;
   text-align: center;
-  justify-content: center;
-  letter-spacing: 0.07em;
   -webkit-appearance: none;
   transition: color 0.35s, background-color 0.35s, border-color 0.35s,
     box-shadow 0.35s, opacity 0.35s;
   font-family: inherit;
-  min-height: 48px;
-  position: relative;
-  overflow: hidden;
-  z-index: 1;
+  min-width: 120px;
+  min-height: 52px;
+  border-radius: 8px;
+  padding: 0 32px;
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 52px;
+  display: flex;
+  justify-content: center;
+  transition: all 300ms ease-in-out;
+  border: 1px solid transparent;
   &.btn-primary {
     background-color: $purple;
     color: $white;
     border-color: $purple;
     &:hover {
       background-color: $purple-dark;
+      border-color: $purple-dark;
+      color: $white;
     }
     &.btn-cta {
       font-weight: 600;
@@ -33,36 +38,22 @@
         margin-left: 0.85rem;
       }
     }
-    &.btn-white {
-      background-color: $white;
-      color: $black;
-      &:hover {
-        background-color: $purple;
-        border-color: $purple;
-        color: $white;
-      }
-    }
   }
   &.btn-secondary {
-    color: $black;
-    border-color: transparent;
-    &:hover {
-      background-color: $gray-light;
-      border-color: $gray-light;
-    }
-  }
-  &.btn-outline {
     color: $purple;
-    &:hover {
-      background-color: $purple;
-      border-color: $purple;
-      color: $white;
+    &:hover,
+    &:focus {
+      color: $purple-dark;
+      background-color: $purple-light;
     }
   }
-  & + .btn {
-    margin-left: 1rem;
+  &.btn-sm {
+    min-height: 38px;
+    line-height: 38px;
+    padding: 0 16px;
+    font-size: 16px;
   }
 }
 .btn-group {
-  display: flex;
+  width: fit-content;
 }
