--- a/static/css/_footer.scss
+++ b/static/css/_footer.scss
@@ -1,30 +1,103 @@
-footer {
-  border-top: 1px solid $gray-light;
-  padding: 40px 0;
-  & > div {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    @media (max-width: 767px) {
-      flex-direction: column;
-      align-items: flex-start;
-      & > div {
-        &:not(:last-child) {
-          margin-bottom: 24px;
+.footer {
+  section {
+    background-color: $coolGray-10;
+    & > div {
+      min-height: 70px;
+      font-size: 16px;
+      padding: 16px 0;
+      display: flex;
+      align-items: center;
+      @extend %space-between;
+      @media (max-width: 992px) {
+        flex-direction: column;
+      }
+      .social-links {
+        margin: 0;
+        padding: 0;
+        display: flex;
+        list-style: none;
+        li {
+          padding: 0 12px;
+          a {
+            transition: 0.2s ease-in-out;
+            @media (max-width: 556px) {
+              padding: 0 12px;
+            }
+            @media (max-width: 400px) {
+              padding: 0 12px;
+            }
+            svg {
+              display: block;
+              vertical-align: middle;
+              fill: $black;
+              transition: 0.2s ease-in-out;
+            }
+            &:hover {
+              color: $black;
+              svg {
+                fill: $purple;
+              }
+            }
+          }
+        }
+      }
+      ul {
+        &.social-links {
+          @media (max-width: 992px) {
+            order: 1;
+          }
+        }
+      }
+      .link {
+        @media (max-width: 992px) {
+          order: 2;
+          padding: 16px 0;
+        }
+        @media (max-width: 400px) {
+          flex-direction: column;
+          align-items: center;
+        }
+        ul {
+          margin: 0;
+          padding: 0;
+          display: flex;
+          list-style: none;
+          li {
+            &:not(:last-child) {
+              margin-right: 12px;
+              padding-right: 12px;
+              border-right: 1px solid #4d5358;
+            }
+            @media (max-width: 400px) {
+              padding: 12px 0;
+            }
+            a {
+              padding: 0;
+              color: $black;
+              &:hover {
+                color: $purple-dark;
+              }
+            }
+            &:not(:last-child) {
+              margin-right: 12px;
+              padding-right: 12px;
+            }
+          }
         }
       }
     }
-    a {
-      padding: 0 1rem;
-      @media (max-width: 767px) {
-        padding: 0 1rem 0 0;
-        &:last-child {
-          padding: 0 0 0 1rem;
-        }
-      }
-      &:hover {
-        color: $gray-dark;
-      }
+  }
+  p {
+    margin: 0;
+    @media (max-width: 992px) {
+      order: 3;
+      text-align: center;
+    }
+  }
+  a {
+    color: $purple;
+    &:hover {
+      color: $purple-dark;
     }
   }
 }
