--- a/static/css/_variable.scss
+++ b/static/css/_variable.scss
@@ -2,20 +2,21 @@
 $font-stack: "Inter", sans-serif;
 
 // Brand tones
-$purple: #5e00cf;
-$purple-dark: #430095;
-$black: #1b1c1e;
+$purple: #6929c4;
+$purple-dark: #7c3dd6;
+$black: #202124;
 $white: #ffffff;
-
+$hairline: #dadce0;
 $gray-light: #e8e9ea;
 $gray-medium: #757a7e;
 $gray-dark: #41484e;
-
+$coolGray-10: #f2f4f8;
+$purple-light: #d4bbff;
 // notification alerts colors
 $success: #39b55a;
 $warning: #f1a321;
 $error: #e61728;
-$yellow: #ffe100;
+$yellow: #fcde2b;
 
 // spacing modifier variable.
 $space-none: 0;
