added docs link

--- a/static/css/_header.scss
+++ b/static/css/_header.scss
@@ -51,6 +51,9 @@ header {
             &:hover {
               color: $purple;
             }
+            &.active {
+              color: $purple;
+            }
           }
         }
         &.nav-links {
