added products link in header

--- a/static/css/_variable.scss
+++ b/static/css/_variable.scss
@@ -30,3 +30,60 @@ $space-auto: auto;
 $blue: #008ecf;
 $blue-darkest: #09263c;
 $blue-dark: #073857;
+
+$font-stack: "Inter", sans-serif;
+$primary: #6929c4;
+$primary-dark: #7c3dd6;
+
+$primary-light: #efe6fa;
+$hairline: #dadce0;
+$black: #202124;
+$grayLight: #5f6368;
+$graylightest: #fbfbfb;
+$bodyText: #414141;
+$white: #ffffff;
+$coolGray-10: #f2f4f8;
+// notification alerts colors
+$success: #39b55a;
+$warning: #f1a321;
+$error: #e61728;
+
+$p72: 72px;
+
+$font-stack: "Inter", sans-serif;
+$base-font: 18px;
+//Gray Tone
+$coolGray-10: #f2f4f8;
+$coolGray-20: #dde1e6;
+$coolGray-30: #c1c7cd;
+$coolGray-40: #a2a9b0;
+$coolGray-50: #878d96;
+$coolGray-60: #697077;
+$coolGray-70: #4d5358;
+$coolGray-80: #343a3f;
+$coolGray-90: #21272a;
+$coolGray-100: #121619;
+
+//primary Tone
+$purple-10: #f6f2ff;
+$purple-20: #e8daff;
+$purple-30: #d4bbff;
+$purple-40: #be95ff;
+$purple-50: #a56eff;
+$purple-60: #8a3ffc;
+$purple-70: #6929c4;
+$purple-70-hover: #7c3dd6;
+$purple-80: #491d8b;
+$purple-90: #31135e;
+$purple-100: #1c0f30;
+
+//warning
+$yellow: #fcde2b;
+
+$success: #00d17e;
+
+//spacing
+$py-72: 72px;
+$py-96: 96px;
+$my-150: 150px;
+$w-100: 100%;
