--- a/static/css/_header.scss
+++ b/static/css/_header.scss
@@ -6,6 +6,11 @@ header {
     z-index: 3;
     position: relative;
     background: $white;
+    & > div {
+      @media (max-width: 767px) {
+        padding: 0;
+      }
+    }
     nav {
       max-width: 1248px;
       margin: 0 auto;
@@ -49,10 +54,26 @@ header {
               }
             }
             &:hover {
-              color: $purple;
+              color: $primary;
             }
             &.active {
-              color: $purple;
+              color: $primary;
+            }
+          }
+          ul {
+            li {
+              a {
+                &:not(.btn) {
+                  min-height: 56px;
+                  @media (max-width: 767px) {
+                    padding: 0 0 0 24px;
+                  }
+                }
+                &:hover {
+                  transition: all 0.3ms ease-in-out;
+                  background-color: $purple-10;
+                }
+              }
             }
           }
         }
@@ -60,6 +81,8 @@ header {
           margin-right: 24px;
           @media (max-width: 767px) {
             margin-bottom: 32px;
+            width: 100%;
+            margin-right: 0;
           }
         }
       }
@@ -115,7 +138,6 @@ header {
       position: absolute;
       top: 42px;
       left: 20px;
-      padding: 0;
       @media (min-width: 767px) {
         display: none;
       }
@@ -186,4 +208,109 @@ header {
     bottom: 0;
     z-index: -1;
   }
+}
+
+/* Dropdown */
+
+#main input#navcheck:checked ~ header nav ul ul {
+  @media (max-width: 992px) {
+    display: none !important;
+  }
+}
+#main input#navcheck:checked ~ header nav ul li input#products:checked ~ ul {
+  @media (max-width: 992px) {
+    display: block !important;
+  }
+}
+.dropdown {
+  display: inline-block;
+  position: relative;
+  font-weight: 500;
+  display: flex;
+  align-items: center;
+  min-height: 100px;
+  color: #202124;
+  @media (max-width: 992px) {
+    width: 100%;
+    min-height: 72px;
+    flex-direction: column;
+    align-items: flex-start;
+    padding: 24px 0;
+  }
+}
+
+.dd-button {
+  cursor: pointer;
+  white-space: nowrap;
+  align-items: center;
+  padding: 0 48px 0 24px;
+  font-size: 16px;
+  font-weight: 500;
+  color: $coolGray-100;
+  display: flex;
+  @media (max-width: 992px) {
+    padding: 0 48px 0 0;
+  }
+  &:hover {
+    color: $purple-70;
+    svg {
+      path {
+        stroke: $coolGray-40;
+      }
+    }
+    &:after {
+      background-image: url("data:image/svg+xml,%3Csvg width='16' height='9' viewBox='0 0 16 9' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M15.1812 1.3938L8.39371 8.18124L1.60627 1.3938' stroke='%236929c4' stroke-width='1.5' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E%0A");
+    }
+  }
+}
+
+.dd-button:after {
+  content: "";
+  position: absolute;
+  background-image: url("data:image/svg+xml,%3Csvg width='16' height='9' viewBox='0 0 16 9' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M15.1812 1.3938L8.39371 8.18124L1.60627 1.3938' stroke='%23121619' stroke-width='1.5' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E%0A");
+  background-repeat: no-repeat;
+  background-position: center right;
+  background-size: 16px 9px;
+  width: 16px;
+  height: 9px;
+  right: 16px;
+}
+
+.dd-input {
+  display: none;
+  @media (max-width: 992px) {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+  }
+}
+
+.dd-menu {
+  position: absolute;
+  top: 80px;
+  background-color: $white;
+  box-shadow: rgba(35, 31, 32, 0.2) 0px 0px 20px;
+  padding: 16px;
+  width: 200px;
+  border-radius: 8px;
+
+  @media (max-width: 992px) {
+    box-shadow: none;
+    border-radius: 0;
+    width: 100%;
+    position: relative;
+    top: 0;
+  }
+}
+
+.dd-input + .dd-menu {
+  display: none !important;
+  @media (max-width: 992px) {
+    margin-top: 16px;
+  }
+}
+
+.dd-input:checked + .dd-menu {
+  display: block !important;
 }
