updated dropdown functionality

--- a/static/css/_landing.scss
+++ b/static/css/_landing.scss
@@ -17,7 +17,7 @@
     margin-top: 1rem;
     .subtitle {
       margin-top: 48px;
-      label {
+      span {
         color: $purple;
         font-size: 0.875rem;
         letter-spacing: 1.5px;
