--- a/static/css/_footer.scss
+++ b/static/css/_footer.scss
@@ -1,103 +1,152 @@
-.footer {
-  section {
-    background-color: $coolGray-10;
+footer {
+  p {
+    margin: 0;
+  }
+  .footer-top {
     & > div {
-      min-height: 70px;
-      font-size: 16px;
-      padding: 16px 0;
-      display: flex;
-      align-items: center;
-      @extend %space-between;
-      @media (max-width: 992px) {
-        flex-direction: column;
+      position: relative;
+      &:before {
+        position: absolute;
+        content: "";
+        width: calc(100% - 48px);
+        height: 1px;
+        background-color: $coolGray-40;
+        top: 0;
+        left: 24px;
       }
-      .social-links {
-        margin: 0;
-        padding: 0;
-        display: flex;
-        list-style: none;
-        li {
-          padding: 0 12px;
-          a {
-            transition: 0.2s ease-in-out;
-            @media (max-width: 556px) {
-              padding: 0 12px;
+      padding-top: 72px;
+      margin-bottom: 48px;
+      .logo-footer {
+        a {
+          display: block;
+          margin-bottom: 24px;
+        }
+        p {
+          margin-bottom: 24px;
+          max-width: 90%;
+          @media (max-width: 767px) {
+            max-width: 100%;
+          }
+          @media (max-width: 767px) {
+            &:last-child {
+              margin-bottom: 0;
+              max-width: 100%;
             }
-            @media (max-width: 400px) {
-              padding: 0 12px;
-            }
-            svg {
-              display: block;
-              vertical-align: middle;
-              fill: $black;
-              transition: 0.2s ease-in-out;
-            }
-            &:hover {
-              color: $black;
-              svg {
-                fill: $purple;
-              }
+          }
+          span {
+            color: $purple-70;
+          }
+        }
+      }
+    }
+    .social-links {
+      display: flex;
+      a {
+        margin: 0 24px 0 0;
+        display: block;
+        color: $coolGray-70;
+        svg {
+          vertical-align: middle;
+        }
+        &:hover {
+          svg {
+            path {
+              fill: $purple-70-hover;
             }
           }
         }
       }
-      ul {
-        &.social-links {
-          @media (max-width: 992px) {
+    }
+    h4 {
+      color: $coolGray-100;
+      font-weight: 500;
+      margin-bottom: 24px;
+      & ~ h4 {
+        margin-top: 48px;
+      }
+      @media (max-width: 1023px) {
+        margin-top: 48px;
+      }
+    }
+    ul {
+      li {
+        &:not(:last-child) {
+          margin-bottom: 24px;
+        }
+        a {
+          font-weight: 400;
+          color: $coolGray-70;
+          font-size: 16px;
+          display: flex;
+          align-items: center;
+          &:hover {
+            color: $purple-70-hover;
+          }
+        }
+        span {
+          margin-left: 0.5rem;
+          background: $purple-70;
+          border-radius: 0.25rem;
+          padding: 0.2rem 0.5rem;
+          font-weight: 500;
+          font-size: 0.55rem;
+          line-height: 1;
+          color: $white;
+          text-transform: uppercase;
+        }
+      }
+      & ~ ul {
+        @media (max-width: 1024px) {
+          margin-bottom: 68px;
+        }
+      }
+    }
+  }
+  .footer-bottom {
+    background-color: $coolGray-10;
+    font-size: 16px;
+    & > div {
+      min-height: 70px;
+      @extend %space-between;
+      @media (max-width: 767px) {
+        flex-direction: column;
+        padding: 16px 0;
+        min-height: 88px;
+      }
+      & > div {
+        @media (max-width: 767px) {
+          &:first-child {
+            order: 3;
+          }
+          &:last-child {
+            order: 2;
+            margin: 12px 0;
+          }
+          &:nth-child(2) {
             order: 1;
           }
         }
       }
-      .link {
-        @media (max-width: 992px) {
-          order: 2;
-          padding: 16px 0;
-        }
-        @media (max-width: 400px) {
-          flex-direction: column;
-          align-items: center;
-        }
-        ul {
-          margin: 0;
-          padding: 0;
-          display: flex;
-          list-style: none;
-          li {
-            &:not(:last-child) {
-              margin-right: 12px;
-              padding-right: 12px;
-              border-right: 1px solid #4d5358;
-            }
-            @media (max-width: 400px) {
-              padding: 12px 0;
-            }
-            a {
-              padding: 0;
-              color: $black;
-              &:hover {
-                color: $purple-dark;
-              }
-            }
-            &:not(:last-child) {
-              margin-right: 12px;
-              padding-right: 12px;
+    }
+
+    .link {
+      ul {
+        @extend %d-flex;
+        li {
+          @extend %d-flex;
+          &:not(:last-child) {
+            margin-right: 12px;
+            padding-right: 12px;
+            border-right: 1px solid $coolGray-70;
+          }
+          a {
+            color: $coolGray-70;
+            &:hover {
+              color: $purple-70-hover;
             }
           }
         }
       }
-    }
-  }
-  p {
-    margin: 0;
-    @media (max-width: 992px) {
-      order: 3;
-      text-align: center;
-    }
-  }
-  a {
-    color: $purple;
-    &:hover {
-      color: $purple-dark;
     }
   }
 }
