--- a/static/css/_header.scss
+++ b/static/css/_header.scss
@@ -73,6 +73,17 @@ header {
                   transition: all 0.3ms ease-in-out;
                   background-color: $purple-10;
                 }
+                span {
+                  margin-left: 0.5rem;
+                  background: $purple-70;
+                  border-radius: 0.25rem;
+                  padding: 0.2rem 0.5rem;
+                  font-weight: 500;
+                  font-size: 0.55rem;
+                  line-height: 1;
+                  color: $white;
+                  text-transform: uppercase;
+                }
               }
             }
           }
@@ -292,7 +303,7 @@ header {
   background-color: $white;
   box-shadow: rgba(35, 31, 32, 0.2) 0px 0px 20px;
   padding: 16px;
-  width: 200px;
+  width: 256px;
   border-radius: 8px;
 
   @media (max-width: 992px) {
