--- a/static/css/_grid.scss
+++ b/static/css/_grid.scss
@@ -53,14 +53,58 @@
   }
 }
 .grid-33 {
+  display: flex;
+  flex-wrap: wrap;
   & > div {
-    float: left;
     display: inline-block;
+    float: left;
     margin-right: 24px;
+    width: calc(33.33% - (24px * 2 / 3);
     margin-bottom: 24px;
-    width: calc(33% - (24px * 2 / 3));
+    @media (max-width: 767px) {
+      margin-right: 0;
+    }
     &:nth-child(3n) {
       margin-right: 0;
+      @media (max-width: 992px) {
+        margin-right: 24px;
+      }
+      @media (max-width: 767px) {
+        margin-right: 0;
+      }
+    }
+    // &:nth-last-child(2),
+    // &:nth-last-child(3){
+
+    // }
+    &:last-child,
+    &:nth-last-child(2),
+    &:nth-last-child(3)
+    {
+      @media (min-width: 992px) {
+      margin-bottom: 0;
+      }
+    }
+    &:nth-last-child(3) {
+      @media (max-width: 992px) {
+        margin-bottom: 24px;
+      }
+    }
+    &:nth-last-child(2){
+    @media (max-width: 767px) {
+      margin-bottom: 24px;
+    }
+  }
+    @media (max-width: 992px) {
+      width: calc(50% - (24px / 2));
+    }
+    @media (max-width: 767px) {
+      width:100%;
+    }
+    &:nth-child(2n) {
+      @media (max-width: 992px) {
+        margin-right: 0;
+      }
     }
   }
 }
@@ -82,6 +126,29 @@
       margin-right: 0;
     }
     &:nth-child(4n) {
+      margin-right: 0;
+    }
+  }
+}
+
+.grid-30-70 {
+  display: flex;
+  flex-wrap: wrap;
+  & > div {
+    display: inline-block;
+    float: left;
+    margin-right: 24px;
+    width: calc(30% - (24px * 1 / 2));
+    &:nth-child(2n) {
+      margin-right: 0;
+      width: calc(70% - (24px * 1 / 2));
+      @media (max-width: 992px) {
+        margin-top: 24px;
+        width: 100%;
+      }
+    }
+    @media (max-width: 992px) {
+      width: 100%;
       margin-right: 0;
     }
   }
