--- a/static/css/_variable.scss
+++ b/static/css/_variable.scss
@@ -63,7 +63,7 @@ $coolGray-70: #4d5358;
 $coolGray-80: #343a3f;
 $coolGray-90: #21272a;
 $coolGray-100: #121619;
-
+$gray-lightest: #e8e9ea;
 //primary Tone
 $purple-10: #f6f2ff;
 $purple-20: #e8daff;
