--- a/static/css/_header.scss
+++ b/static/css/_header.scss
@@ -81,6 +81,7 @@ header {
     justify-content: space-between;
     background-color: $white;
     & > div {
+      position: relative;
       max-width: 1248px;
       margin: 0 auto;
       padding: 0 24px;
@@ -88,7 +89,7 @@ header {
         padding: 0 16px;
       }
       @extend %space-between;
-      ul {
+      .navigation {
         @extend %d-flex;
         @media (max-width: 992px) {
           display: none !important;
@@ -202,7 +203,7 @@ header {
     position: absolute;
     top: 0;
     right: 0;
-    width: 80px;
+    width: 72px;
     height: 85px;
     z-index: 4;
     cursor: pointer;
@@ -215,7 +216,7 @@ input#navcheck:checked {
     & ~ header nav .navigation {
       display: block !important;
       position: absolute;
-      top: 74px;
+      top: 64px;
       background: $white;
       left: 0;
       right: 0;
