--- a/static/css/_landing.scss
+++ b/static/css/_landing.scss
@@ -14,7 +14,6 @@
     }
   }
   .description {
-    margin-top: 1rem;
     .subtitle {
       margin-top: 48px;
       span {
@@ -49,6 +48,10 @@
   .vector {
     @media (max-width: 1200px) {
       display: none;
+    }
+    img {
+      border-radius: 20px;
+      box-shadow: 0px 0px 16px 0px rgba(0, 0, 0, 0.1);
     }
   }
   &.grid-40-60 {
